<resources>
    <string name="app_name">SocialNow</string>
    <string name="login_ac">Login to your Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="b_email">BOUN E-mail Address</string>
    <string name="terms">Terms of Uses</string>
    <string name="rt_login">Return to Login Page</string>
    <string-array name="user_type">
        <item>Please select......</item>
        <item>Undergraduate</item>
        <item>Graduate</item>
        <item>Phd</item>
        <item>Instructor</item>
        <item>Assistant</item>
        <item>Alumni</item>
    </string-array>
    <string-array name="event_privacy">
        <item>Who can see this event?</item>
        <item>Undergraduate</item>
        <item>Graduate</item>
        <item>Instructor</item>
        <item>Assistant</item>
        <item>Alumni</item>
        <item>Any SocialNow user</item>
    </string-array>
    <string-array name="group_privacy">
        <item>Who can see this group?</item>
        <item>Undergraduate</item>
        <item>Graduate</item>
        <item>Instructor</item>
        <item>Assistant</item>
        <item>Alumni</item>
        <item>Any SocialNow user</item>
    </string-array>
    <string name="cf_mail">A confirmation email will be sent to you after you are appoved. Please follow the instructions in the mail to activate your account. </string>
    <string name="title_activity_home_page">Home Page</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string-array name="panel">
        <item>Home</item>
        <item>Profile</item>
        <item>Events</item>
        <item>Groups</item>
        <item>Notifications</item>
        <item>Search</item>
        <item>LOG OUT</item>
    </string-array>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string-array name="events">
        <item>Event 1</item>
        <item>Event 2</item>
        <item>Event 3</item>
        <item>Event 4</item>
    </string-array>
    <string name="title_activity_event">Event Title</string>
    <string name="title_activity_editevent">Edit Event</string>
    <string name="eventdes">Description</string>
    <string name="description">Our project is about creating a social network for people in Bogazici University CmpE department. It will be a closed system in which people can create their own profile pages and can share their interest topics. Users will also be able to create interest groups and events. There will be an android application and a website for this social network project.</string>
    <string name="eventname">Event Name</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="stime">Start Time</string>
    <string name="etime">End Time</string>
    <string name="groupname">Group Name</string>
</resources>
