<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context=".SignupActivity"
    android:padding="12dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Create your SocialNow Account"
        android:id="@+id/tCreatAc"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginBottom="@dimen/big_margin"
        android:layout_centerHorizontal="true" />

    <EditText
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:layout_below="@id/tCreatAc"
        android:ems="10"
        android:id="@+id/etName"
        android:layout_marginBottom="@dimen/small_margin"
        style="@style/dEditText" />

    <EditText
        android:inputType="textPersonName"
        android:hint="@string/surname"
        android:layout_below="@id/etName"
        android:ems="10"
        android:id="@+id/etSurname"
        android:layout_marginBottom="@dimen/small_margin"
        style="@style/dEditText"/>

    <EditText
        android:inputType="textEmailAddress"
        android:hint="@string/b_email"
        android:layout_below="@id/etSurname"
        android:id="@+id/etbMail"
        android:layout_marginBottom="@dimen/small_margin"
        style="@style/dEditText"/>

    <EditText
        android:hint="@string/password"
        android:layout_below="@id/etbMail"
        android:id="@+id/etPW"
        android:inputType="textPassword"
        android:layout_marginBottom="@dimen/small_margin"
        style="@style/dEditText"/>

    <EditText
        android:hint="Profile Photo URL"
        android:layout_below="@id/etPW"
        android:id="@+id/photo"
        android:layout_marginBottom="@dimen/small_margin"
        style="@style/dEditText"/>

    <Spinner
        android:id="@+id/sUserType"
        android:layout_below="@id/photo"
        android:layout_marginBottom="@dimen/big_margin"
        style="@style/dEditText"/>

    <CheckBox
        android:text="I accept the term of uses."
        android:id="@+id/cbAccept"
        android:layout_below="@+id/sUserType"
        android:layout_alignParentLeft="true"
        style="@style/dCheckBox" />

    <Button
        android:text="SEND TO APPROVAL"
        android:id="@+id/bSdApr"
        android:layout_below="@id/cbAccept"
        android:layout_marginBottom="@dimen/small_margin"
        android:background="@drawable/purplebutton"
        android:onClick="send_to_approval"
        style="@style/dBigButton"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bSdApr">

        <ImageView
            android:layout_width="@dimen/small_icon"
            android:layout_height="@dimen/small_icon"
            android:src="@drawable/leftarrow"
            android:id="@+id/ivArrow"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/small_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/rt_login"
            android:id="@+id/tRtLogin"
            android:layout_toRightOf="@+id/ivArrow"
            android:layout_centerVertical="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Term of Uses"
            android:id="@+id/tTerm"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

</RelativeLayout>